config/deploy/manifest-kubernetes.yaml
---
# Source: dynatrace-operator/templates/Common/webhook/service.yaml
# Copyright 2020 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: dynatrace-webhook
  namespace: dynatrace
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
spec:
  selector:
    internal.dynatrace.com/app: webhook
    internal.dynatrace.com/component: webhook
  ports:
    - port: 443
      protocol: TCP
      targetPort: server-port
---
# Source: dynatrace-operator/templates/Common/webhook/deployment-webhook.yaml
# Copyright 2020 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynatrace-webhook
  namespace: dynatrace
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      internal.dynatrace.com/component: webhook
      internal.dynatrace.com/app: webhook
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-logs-container: webhook
      labels:
        dynatrace.com/operator: oneagent
        internal.dynatrace.com/component: webhook
        internal.dynatrace.com/app: webhook
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      containers:
        - name: webhook
          args:
            - webhook-server
          image:
            quay.io/dynatrace/dynatrace-operator:snapshot
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthz
              port: server-port
              scheme: HTTPS
          ports:
            - containerPort: 8383
              name: metrics
            - containerPort: 8384
              name: validation
            - containerPort: 8443
              name: server-port
          resources:
            requests:
              cpu: 300m
              memory: 128Mi
            limits:
              cpu: 600m
              memory: 256Mi
      serviceAccountName: dynatrace-webhook
---
# Source: dynatrace-operator/templates/Kubernetes/operator/deployment-operator.yaml
# Copyright 2020 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynatrace-operator
  namespace: dynatrace
  labels:
    internal.dynatrace.com/component: operator
    dynatrace.com/operator: dynakube
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      name: dynatrace-operator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: dynatrace-operator
        internal.dynatrace.com/component: operator
        dynatrace.com/operator: dynakube
    spec:
      containers:
        - name: dynatrace-operator
          args:
            - operator
          # Replace this with the built image name
          image:
            quay.io/dynatrace/dynatrace-operator:snapshot
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: metrics
            - containerPort: 10080
              name: server-port
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: server-port
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: server-port
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      serviceAccountName: dynatrace-operator
---
# Source: dynatrace-operator/templates/Common/webhook/mutatingwebhookconfiguration.yaml
# Copyright 2020 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: dynatrace-webhook
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
webhooks:
  - name: webhook.dynatrace.com
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: Namespaced
    namespaceSelector:
      matchExpressions:
        - key: oneagent.dynatrace.com/instance
          operator: Exists
    clientConfig:
      service:
        name: dynatrace-webhook
        namespace: dynatrace
        path: /inject
    admissionReviewVersions: ["v1beta1", "v1"]
    sideEffects: None
---
# Source: dynatrace-operator/templates/Common/webhook/validatingwebhookconfiguration.yaml
# Copyright 2020 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: dynatrace-webhook
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
      - v1alpha1
    clientConfig:
      service:
        name: dynatrace-webhook
        namespace: dynatrace
        path: /validate
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - dynatrace.com
        apiVersions:
          - v1beta1
        resources:
          - dynakubes
    name: webhook.dynatrace.com
    sideEffects: None
